Fix scroll button on mobile again

--- a/css/index.css
+++ b/css/index.css
@@ -69,7 +69,7 @@
 }
 
 .button-right {
-    left: 50rem;
+    left: 48rem;
 }
 
 .col-md-6 {
@@ -95,7 +95,7 @@
     }
 
     .slide-container {
-        width: 50rem;
+        width: 48rem;
     }
 
     .texas {
